--- a/.env_example
+++ b/.env_example
@@ -4,3 +4,16 @@ MONGODB_URI=
 MONGODB_PASSWORD=
 JWT_SECRET=
 JWT_EXPIRES_IN=24h
+
+# Email Configuration MAILTRAP
+EMAIL_SERVICE=smtp
+EMAIL_HOST=
+EMAIL_PORT=2525
+EMAIL_USER=
+EMAIL_PASSWORD=
+EMAIL_FROM=noreply@ecommerce.com
+EMAIL_FROM_NAME=E-Commerce CoderHouse
+FRONTEND_URL=http://localhost:8080
+
+# Activación de cuenta por email (true/false)
+EMAIL_ACTIVATION_REQUIRED=false
